<resources>
    <string name="app_name">HotMartApp</string>
    <string name="home_toolbar_title">Home</string>
    <string name="location_thumbnail_description">Imagem do estabelecimento</string>
    <string name="error_message">Ops, tente novamente</string>
    <string name="refresh_button_description">Botão para tentar novamente</string>
    <string name="toolbarImage_description">Imagem do estabelecimento</string>
    <string name="back_button_description">Botão para voltar</string>
    <string name="share_button_description">Botão para compartilhar</string>
    <string name="picture_description">Foto ilustrativa</string>
    <string name="pictures_text">Fotos</string>
    <string name="about_text">Sobre</string>
    <string name="reviews_text">Reviews</string>
    <string name="more_reviews">ver todos os %1$d reviews</string>
    <string name="monday">seg</string>
    <string name="tuesday">ter</string>
    <string name="wednesday">qua</string>
    <string name="thursday">qui</string>
    <string name="friday">sex</string>
    <string name="saturday">sáb</string>
    <string name="sunday">dom</string>
    <string name="and">e</string>
    <string name="to_day">a</string>
    <string name="to_hour">às</string>
</resources>